# fp

./: README.md
lab_1/: Makefile  README.md  config.json  example.ref  obfuscator.ref
lab_2/: .gitignore  Makefile  lab2.cabal  test.hs
lab_2/app/: Main.hs
lab_2/src/: CPS.hs
lab_3/: Main.hs  README.md
lab_4/: Main.hs  Makefile
lab_5/: Makefile  README.md  test.hs
lab_5/src/: CPS.hs
